wip: mmapping file, split among threads