@@ -15,6 +15,9 @@
 #  limitations under the License.
 #
 
-
-JAVA_OPTS=""
-time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_elsteveogrande
+time \
+  java $JAVA_OPTS \
+    --class-path target/average-1.0.0-SNAPSHOT.jar \
+    --enable-preview \
+    -Xms10g -Xmx10g \
+    dev.morling.onebrc.CalculateAverage_elsteveogrande
